# Nano33_PC_Head_Tracker

./: .gitignore  Licence.adoc  keywords.txt  library.properties  platformio.ini  readme.md
.pio/libdeps/nano33ble/FS_Nano33BLE/: .piopm
PC_BLE_App/: Build_PC_BLE_APP.bat  Nano33 Head Tracker - PC BLE.spec
PC_BLE_App/src/: PC_BLE_App.py
examples/DIY_Calibration_Accelerometer/: DIY_Calibration_Accelerometer.ino
examples/DIY_Calibration_Gyroscope/: DIY_Calibration_Gyroscope.ino
examples/DIY_Calibration_Magnetometer/: DIY_Calibration_Magnetometer.ino
examples/Nano33_HeadTracker_v1/: Nano33_HeadTracker_v1.ino
pc_app/: Cargo.toml
pc_app/src/: app_state.rs  ble_udp_loop.rs  flashing.rs  main.rs  ui.rs  utilities.rs
pc_ble_app/: Cargo.toml
pc_ble_app/src/: main.rs
src/: main.cpp
src/BMI270_BMM150/: BMI270.cpp  BoschSensorClass.h
src/Calibration/: Nano33_Calibration.cpp  Nano33_Calibration.h
src/IMUHandler/: IMUHandler.h
src/IO/: IO.cpp  IO.h
src/LSM9DS1/: LSM9DS1.cpp  LSM9DS1.h
src/Utils/: Utils.cpp  Utils.h
