[package]
name = "pc_ble_app"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = true

[package.metadata.windows]
subsystem = "windows"

[dependencies]
# BLE communication library
btleplug = "0.9.0"

bytemuck = "1.15"
uuid = "0.8.2"
futures = "0.3"

# Asynchronous runtime
tokio = { version = "1.32", features = ["full"] }

# UDP socket and serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# GUI framework
eframe = { version = "0.25.0", features = ["glow"] }

# Logging (optional, for better debugging)
log = "0.4"
env_logger = "0.10"

# Optional dependency: explicitly include winapi
winapi = { version = "0.3", features = ["winuser", "windef"] }
